finalize initialization of project

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,7 @@ file.reference.include_path-openid-php-openid-44243b1=../../../../../include_pat
 file.reference.OpenMIAGE-lib=../lib
 ignore.path=
 include.path=\
-    ${php.global.include.path}:\
-    ${file.reference.OpenMIAGE-lib}
+    ${php.global.include.path}
 php.version=PHP_53
 phpunit.bootstrap=
 phpunit.bootstrap.create.tests=false
